Se añadieron comentarios, se borraron comentarios de relleno o de la IA, se ordenó el codigo para que sea mas legible y se borraron imoprts y variables sin usar