@@ -7,7 +7,6 @@ import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -22,8 +21,6 @@ import com.example.demo.dto.DepartamentoTareaDTO;
 import com.example.demo.dto.DetalleEstimacionDTO;
 import com.example.demo.dto.ResumenTiemposDTO;
 import com.example.demo.dto.TareaSubfaseDTO;
-import com.example.demo.entity.*;
-import com.example.demo.repository.*;
 import com.example.demo.entity.Departamento;
 import com.example.demo.entity.DetalleEstimacion;
 import com.example.demo.entity.Excel;
@@ -44,7 +41,7 @@ public class DetalleEstimacionService {
 
     @Autowired
     private DetalleEstimacionRepository detalleEstimacionRepository;
-    
+
     @Autowired
     private TareaProyectoRepository tareaProyectoRepository;
 
@@ -67,19 +64,18 @@ public class DetalleEstimacionService {
     private GitLabTareaRepository gitLabTareaRepository;
 
     /**
-     * Procesa un archivo Excel físico, implementa la estrategia Find-or-Create en el 
-     * pivote TareaProyecto y guarda los presupuestos de estimación numéricos puros en BD.
-     * @param archivo El archivo MultipartFile subido desde el cliente.
+     * Procesa un archivo Excel físico, implementa la estrategia Find-or-Create en
+     * el
+     * pivote TareaProyecto y guarda los presupuestos de estimación numéricos puros
+     * en BD.
+     * 
+     * @param archivo    El archivo MultipartFile subido desde el cliente.
      * @param proyectoId ID del proyecto al que pertenece la estimación.
-     * @param usuarioId ID del usuario que sube el archivo.
-     * @return El número total de presupuestos de tareas insertadas en la base de datos.
+     * @param usuarioId  ID del usuario que sube el archivo.
+     * @return El número total de presupuestos de tareas insertadas en la base de
+     *         datos.
      */
-   @Auditable(
-        accion = "IMPORTAR_EXCEL", 
-        tabla = "excel", 
-        entidad = Excel.class,
-        descripcion = "Se importó un nuevo documento Excel para el proyecto con ID: #{#proyectoId}"
-    )
+    @Auditable(accion = "IMPORTAR_EXCEL", tabla = "excel", entidad = Excel.class, descripcion = "Se importó un nuevo documento Excel para el proyecto con ID: #{#proyectoId}")
     public int procesarExcel(MultipartFile archivo, long proyectoId, Integer usuarioId) throws Exception {
         System.out.println("--- DIAGNÓSTICO PROFUNDO DE EXCEL ---");
         try {
@@ -89,7 +85,7 @@ public class DetalleEstimacionService {
             registroExcel.setFechaSubida(LocalDate.now());
             registroExcel.setRutaArchivo("uploads/" + archivo.getOriginalFilename());
             registroExcel.setVigente(true);
-            
+
             Excel excelGuardado = excelService.guardarDatosExcel(registroExcel);
             Integer idExcelGenerado = excelGuardado.getIdExcel();
 
@@ -102,12 +98,11 @@ public class DetalleEstimacionService {
             System.out.println("Fases encontradas en BD: " + todasLasFasesBD.size());
 
             List<RangoDepartamento> mapaColumnas = Arrays.asList(
-                new RangoDepartamento(3, 4, "Comercial"), new RangoDepartamento(5, 6, "Direccion"),
-                new RangoDepartamento(7, 8, "back"), new RangoDepartamento(9, 10, "front"),
-                new RangoDepartamento(11, 12, "soporte"), new RangoDepartamento(13, 14, "mk"),
-                new RangoDepartamento(15, 16, "ux"), new RangoDepartamento(17, 18, "ui"),
-                new RangoDepartamento(19, 20, "wp-maq")
-            );
+                    new RangoDepartamento(3, 4, "Comercial"), new RangoDepartamento(5, 6, "Direccion"),
+                    new RangoDepartamento(7, 8, "back"), new RangoDepartamento(9, 10, "front"),
+                    new RangoDepartamento(11, 12, "soporte"), new RangoDepartamento(13, 14, "mk"),
+                    new RangoDepartamento(15, 16, "ux"), new RangoDepartamento(17, 18, "ui"),
+                    new RangoDepartamento(19, 20, "wp-maq"));
 
             for (RangoDepartamento rango : mapaColumnas) {
                 rango.setIdBD(determinarDepartamento(rango.getNombreExcel()));
@@ -117,26 +112,28 @@ public class DetalleEstimacionService {
             Sheet hoja = workbook.getSheetAt(0);
             Integer idFasePadreActual = null;
             Integer idSubfaseActual = null;
-            String nombreTareaActual = null; 
+            String nombreTareaActual = null;
 
             for (Row fila : hoja) {
-                if (fila.getRowNum() < 4) { 
-                    continue; 
+                if (fila.getRowNum() < 4) {
+                    continue;
                 }
-                if (esFilaFinal(fila)) { 
-                    break; 
+                if (esFilaFinal(fila)) {
+                    break;
                 }
 
                 String valFase = formatter.formatCellValue(fila.getCell(0));
                 String faseLimpia = normalizarTexto(valFase);
                 if (!faseLimpia.isEmpty()) {
                     idFasePadreActual = todasLasFasesBD.stream()
-                        .filter(f -> { return f.getFasePadre() == null && normalizarTexto(f.getNombre()).equals(faseLimpia); })
-                        .map(Fase::getId)
-                        .findFirst()
-                        .orElse(null);
-                    idSubfaseActual = null; 
-                    nombreTareaActual = null; 
+                            .filter(f -> {
+                                return f.getFasePadre() == null && normalizarTexto(f.getNombre()).equals(faseLimpia);
+                            })
+                            .map(Fase::getId)
+                            .findFirst()
+                            .orElse(null);
+                    idSubfaseActual = null;
+                    nombreTareaActual = null;
                 }
 
                 String valSubfase = formatter.formatCellValue(fila.getCell(1));
@@ -144,11 +141,14 @@ public class DetalleEstimacionService {
                 if (!subfaseLimpia.isEmpty() && idFasePadreActual != null) {
                     final Integer idPadre = idFasePadreActual;
                     idSubfaseActual = todasLasFasesBD.stream()
-                        .filter(f -> { return f.getFasePadre() != null && f.getFasePadre().equals(idPadre) && normalizarTexto(f.getNombre()).equals(subfaseLimpia); })
-                        .map(Fase::getId)
-                        .findFirst()
-                        .orElse(null);
-                    nombreTareaActual = null; 
+                            .filter(f -> {
+                                return f.getFasePadre() != null && f.getFasePadre().equals(idPadre)
+                                        && normalizarTexto(f.getNombre()).equals(subfaseLimpia);
+                            })
+                            .map(Fase::getId)
+                            .findFirst()
+                            .orElse(null);
+                    nombreTareaActual = null;
                 }
 
                 String valTarea = formatter.formatCellValue(fila.getCell(2)).trim();
@@ -159,7 +159,8 @@ public class DetalleEstimacionService {
                 }
 
                 if (fila.getRowNum() >= 4 && fila.getRowNum() <= 8) {
-                    System.out.println("Fila " + fila.getRowNum() + " -> Padre ID: " + idFasePadreActual + " | Subfase ID: " + idSubfaseActual + " | Tarea: " + nombreTareaActual);
+                    System.out.println("Fila " + fila.getRowNum() + " -> Padre ID: " + idFasePadreActual
+                            + " | Subfase ID: " + idSubfaseActual + " | Tarea: " + nombreTareaActual);
                 }
 
                 if (idSubfaseActual != null && nombreTareaActual != null) {
@@ -177,23 +178,24 @@ public class DetalleEstimacionService {
                             final String nomTarea = nombreTareaActual;
 
                             TareaProyecto tareaProyecto = tareaProyectoRepository
-                                .findByIdProyectoAndIdFaseAndIdDepartamentoAndTarea(proyectoId, idSubfase, idDepto, nomTarea)
-                                .orElseGet(() -> {
-                                    TareaProyecto tp = new TareaProyecto();
-                                    tp.setIdProyecto(proyectoId);
-                                    tp.setIdFase(idSubfase);
-                                    tp.setIdDepartamento(idDepto);
-                                    tp.setTarea(nomTarea);
-                                    tp.setCompletada(false);
-                                    return tareaProyectoRepository.save(tp);
-                                });
+                                    .findByIdProyectoAndIdFaseAndIdDepartamentoAndTarea(proyectoId, idSubfase, idDepto,
+                                            nomTarea)
+                                    .orElseGet(() -> {
+                                        TareaProyecto tp = new TareaProyecto();
+                                        tp.setIdProyecto(proyectoId);
+                                        tp.setIdFase(idSubfase);
+                                        tp.setIdDepartamento(idDepto);
+                                        tp.setTarea(nomTarea);
+                                        tp.setCompletada(false);
+                                        return tareaProyectoRepository.save(tp);
+                                    });
 
                             DetalleEstimacion detalle = new DetalleEstimacion();
                             detalle.setIdExcel(idExcelGenerado);
                             detalle.setIdTareaProyecto(tareaProyecto.getIdTareaProyecto());
                             detalle.setTiempoMin(min != null ? min : 0.0);
                             detalle.setTiempoMax(max != null ? max : 0.0);
-                            
+
                             listaParaGuardar.add(detalle);
                         }
                     }
@@ -214,7 +216,9 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Limpia un texto eliminando espacios, pasando a minúsculas y removiendo tildes o caracteres especiales.
+     * Limpia un texto eliminando espacios, pasando a minúsculas y removiendo tildes
+     * o caracteres especiales.
+     * 
      * @param texto El texto original.
      * @return El texto completamente normalizado.
      */
@@ -228,74 +232,87 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Identifica el ID de un departamento en la base de datos partiendo de su nombre normalizado.
+     * Identifica el ID de un departamento en la base de datos partiendo de su
+     * nombre normalizado.
+     * 
      * @param nombre Nombre del departamento.
      * @return ID del departamento o -1 si no se localiza.
      */
     private int determinarDepartamento(String nombre) {
         String nombreLimpio = normalizarTexto(nombre);
         return departamentoRepository.findAll().stream()
-                .filter(d -> { return normalizarTexto(d.getNombre()).equals(nombreLimpio); })
-                .map(d -> { return d.getId(); })
+                .filter(d -> {
+                    return normalizarTexto(d.getNombre()).equals(nombreLimpio);
+                })
+                .map(d -> {
+                    return d.getId();
+                })
                 .findFirst()
                 .orElse(-1);
     }
 
     /**
-     * Extrae el valor de una celda numérica evaluando de forma segura fórmulas y parseando strings.
-     * @param celda Celda de Apache POI.
+     * Extrae el valor de una celda numérica evaluando de forma segura fórmulas y
+     * parseando strings.
+     * 
+     * @param celda     Celda de Apache POI.
      * @param evaluator Evaluador de fórmulas del libro de Excel.
      * @return Double con el valor de la celda o null.
      */
     private Double extraerNumeroDeCelda(Cell celda, FormulaEvaluator evaluator) {
-        if (celda == null) { 
-            return null; 
+        if (celda == null) {
+            return null;
         }
         CellType type = celda.getCellType();
         if (type == CellType.FORMULA) {
             try {
                 CellValue cv = evaluator.evaluate(celda);
-                if (cv.getCellType() == CellType.NUMERIC) { 
-                    return cv.getNumberValue(); 
+                if (cv.getCellType() == CellType.NUMERIC) {
+                    return cv.getNumberValue();
                 }
-            } catch (Exception e) { 
-                return null; 
+            } catch (Exception e) {
+                return null;
             }
         }
-        if (type == CellType.NUMERIC) { 
-            return celda.getNumericCellValue(); 
+        if (type == CellType.NUMERIC) {
+            return celda.getNumericCellValue();
         }
         if (type == CellType.STRING) {
-            try { 
-                return Double.parseDouble(celda.getStringCellValue().trim().replace(",", ".")); 
-            } catch (Exception e) { 
-                return null; 
+            try {
+                return Double.parseDouble(celda.getStringCellValue().trim().replace(",", "."));
+            } catch (Exception e) {
+                return null;
             }
         }
         return null;
     }
 
     /**
-     * Evalúa si se ha llegado al final de la matriz útil de estimaciones detectando el string "total".
+     * Evalúa si se ha llegado al final de la matriz útil de estimaciones detectando
+     * el string "total".
+     * 
      * @param fila Fila del libro Excel.
      * @return True si la fila marca el fin del procesamiento.
      */
     private boolean esFilaFinal(Row fila) {
-        if (fila == null) { 
-            return true; 
+        if (fila == null) {
+            return true;
         }
         Cell cellA = fila.getCell(0);
         return cellA != null && normalizarTexto(cellA.toString()).contains("total");
     }
 
-   /**
-     * Recupera y enriquece los detalles de estimación de un Excel cruzando los datos numéricos con el pivote TareaProyecto.
+    /**
+     * Recupera y enriquece los detalles de estimación de un Excel cruzando los
+     * datos numéricos con el pivote TareaProyecto.
+     * 
      * @param idExcel ID del libro Excel.
      * @return Lista de DTOs mapeados con los nombres de fases y departamentos.
      */
     public List<DetalleEstimacionDTO> obtenerDetallesPorExcel(Integer idExcel) {
         List<DetalleEstimacion> detalles = detalleEstimacionRepository.findByIdExcel(idExcel);
-        System.out.println("[LOG LECTURA] Tareas numéricas encontradas en detalle_estimacion: " + detalles.size() + " para el Excel ID: " + idExcel);
+        System.out.println("[LOG LECTURA] Tareas numéricas encontradas en detalle_estimacion: " + detalles.size()
+                + " para el Excel ID: " + idExcel);
 
         List<Fase> todasLasFases = faseRepository.findAll();
         List<Departamento> todosLosDeptos = departamentoRepository.findAll();
@@ -303,18 +320,25 @@ public class DetalleEstimacionService {
         Excel excel = excelRepository.findById(idExcel).orElse(null);
         Long idProyecto = (excel != null) ? excel.getIdProyecto() : null;
         System.out.println("[LOG LECTURA] Proyecto ID asociado al Excel: " + idProyecto);
-        
-        List<TareaProyecto> todasTareasProyecto = (idProyecto != null) 
-            ? tareaProyectoRepository.findAll().stream().filter(t -> { return t.getIdProyecto().equals(idProyecto); }).collect(Collectors.toList())
-            : new ArrayList<>();
-        System.out.println("[LOG LECTURA] Tareas totales encontradas en el pivote tarea_proyecto para este proyecto: " + todasTareasProyecto.size());
-            
+
+        List<TareaProyecto> todasTareasProyecto = (idProyecto != null)
+                ? tareaProyectoRepository.findAll().stream().filter(t -> {
+                    return t.getIdProyecto().equals(idProyecto);
+                }).collect(Collectors.toList())
+                : new ArrayList<>();
+        System.out.println("[LOG LECTURA] Tareas totales encontradas en el pivote tarea_proyecto para este proyecto: "
+                + todasTareasProyecto.size());
+
         Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
-            .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> { return t; }, (a, b) -> { return a; }));
+                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> {
+                    return t;
+                }, (a, b) -> {
+                    return a;
+                }));
 
         return detalles.stream().map(entidad -> {
             DetalleEstimacionDTO dto = new DetalleEstimacionDTO();
-            dto.setId(entidad.getId()); 
+            dto.setId(entidad.getId());
             dto.setIdExcel(entidad.getIdExcel());
             dto.setIdTareaProyecto(entidad.getIdTareaProyecto());
             dto.setTiempoMin(entidad.getTiempoMin());
@@ -328,14 +352,18 @@ public class DetalleEstimacionService {
                 dto.setCompletada(tp.getCompletada());
 
                 String nombreDepto = todosLosDeptos.stream()
-                        .filter(d -> { return d.getId() == tp.getIdDepartamento(); }) 
+                        .filter(d -> {
+                            return d.getId() == tp.getIdDepartamento();
+                        })
                         .map(Departamento::getNombre)
                         .findFirst()
                         .orElse("Desconocido");
                 dto.setNombreDepartamento(nombreDepto);
 
                 Fase subfase = todasLasFases.stream()
-                        .filter(f -> { return f.getId().equals(tp.getIdFase()); })
+                        .filter(f -> {
+                            return f.getId().equals(tp.getIdFase());
+                        })
                         .findFirst()
                         .orElse(null);
 
@@ -344,7 +372,9 @@ public class DetalleEstimacionService {
 
                     if (subfase.getFasePadre() != null) {
                         String nombrePadre = todasLasFases.stream()
-                                .filter(f -> { return f.getId().equals(subfase.getFasePadre()); })
+                                .filter(f -> {
+                                    return f.getId().equals(subfase.getFasePadre());
+                                })
                                 .map(Fase::getNombre)
                                 .findFirst()
                                 .orElse("Desconocido");
@@ -358,13 +388,16 @@ public class DetalleEstimacionService {
                     dto.setNombreSubfase("Desconocido");
                 }
             } else {
-                System.out.println("[ALERTA] No se encontró el pivote TareaProyecto para el id_tarea_proyecto: " + entidad.getIdTareaProyecto());
+                System.out.println("[ALERTA] No se encontró el pivote TareaProyecto para el id_tarea_proyecto: "
+                        + entidad.getIdTareaProyecto());
             }
             return dto;
         }).collect(Collectors.toList());
     }
+
     /**
      * Recupera las entidades de estimación puras (numéricas) asociadas a un Excel.
+     * 
      * @param idExcel ID del Excel.
      * @return Lista de DetalleEstimacion.
      */
@@ -373,14 +406,18 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Busca las estimaciones detalladas que coinciden con un proyecto, subfase y nombre de tarea específicos cruzando datos con el pivote.
-     * @param idProyecto ID del proyecto.
-     * @param idSubfase ID de la subfase.
-     * @param nombreTarea Texto de la tarea.
+     * Busca las estimaciones detalladas que coinciden con un proyecto, subfase y
+     * nombre de tarea específicos cruzando datos con el pivote.
+     * 
+     * @param idProyecto     ID del proyecto.
+     * @param idSubfase      ID de la subfase.
+     * @param nombreTarea    Texto de la tarea.
      * @param idExcelElegido ID opcional del Excel del historial.
-     * @return Lista de DTOs desglosados por departamento con sus respectivos tiempos estimados y reales.
+     * @return Lista de DTOs desglosados por departamento con sus respectivos
+     *         tiempos estimados y reales.
      */
-    public List<DetalleEstimacionDTO> obtenerDetallePorCriterios(Long idProyecto, Integer idSubfase, String nombreTarea, Integer idExcelElegido) {
+    public List<DetalleEstimacionDTO> obtenerDetallePorCriterios(Long idProyecto, Integer idSubfase, String nombreTarea,
+            Integer idExcelElegido) {
         Integer idExcelBase = resolverIdExcelBase(idProyecto, idExcelElegido);
         if (idExcelBase == null) {
             return new ArrayList<>();
@@ -388,18 +425,25 @@ public class DetalleEstimacionService {
 
         List<DetalleEstimacion> todasLasEstimaciones = detalleEstimacionRepository.findByIdExcel(idExcelBase);
         List<Departamento> todosLosDeptos = departamentoRepository.findAll();
-        
+
         List<TareaProyecto> todasTareasProyecto = tareaProyectoRepository.findAll().stream()
-                .filter(t -> { return t.getIdProyecto().equals(idProyecto); })
+                .filter(t -> {
+                    return t.getIdProyecto().equals(idProyecto);
+                })
                 .collect(Collectors.toList());
-                
+
         Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
-                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> { return t; }, (a, b) -> { return a; }));
+                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> {
+                    return t;
+                }, (a, b) -> {
+                    return a;
+                }));
 
         return todasLasEstimaciones.stream()
                 .filter(d -> {
                     TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
-                    return tp != null && tp.getIdFase().equals(idSubfase) && tp.getTarea().equalsIgnoreCase(nombreTarea.trim());
+                    return tp != null && tp.getIdFase().equals(idSubfase)
+                            && tp.getTarea().equalsIgnoreCase(nombreTarea.trim());
                 })
                 .map(entidad -> {
                     TareaProyecto tp = mapaTareasProyecto.get(entidad.getIdTareaProyecto());
@@ -417,10 +461,12 @@ public class DetalleEstimacionService {
                         dto.setCompletada(tp.getCompletada());
 
                         String nombreDepto = todosLosDeptos.stream()
-                            .filter(d -> { return d.getId() == tp.getIdDepartamento(); })
-                            .map(Departamento::getNombre)
-                            .findFirst()
-                            .orElse("Desconocido");
+                                .filter(d -> {
+                                    return d.getId() == tp.getIdDepartamento();
+                                })
+                                .map(Departamento::getNombre)
+                                .findFirst()
+                                .orElse("Desconocido");
                         dto.setNombreDepartamento(nombreDepto);
                     }
 
@@ -433,14 +479,17 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Obtiene e integra los totales estimativos y reales de las tareas de una subfase del proyecto actual.
-     * @param idProyecto ID del proyecto.
-     * @param idSubfase ID de la subfase.
+     * Obtiene e integra los totales estimativos y reales de las tareas de una
+     * subfase del proyecto actual.
+     * 
+     * @param idProyecto     ID del proyecto.
+     * @param idSubfase      ID de la subfase.
      * @param idExcelElegido ID opcional del Excel.
      * @return Lista de DTOs de las tareas agregadas de la subfase.
      */
-    public List<TareaSubfaseDTO> obtenerTareasSubfase(long idProyecto, Integer idSubfase, Integer idExcelElegido){
-        System.out.println("[LOG SUBFASE] Solicitando tareas de Subfase ID: " + idSubfase + " para Proyecto ID: " + idProyecto);
+    public List<TareaSubfaseDTO> obtenerTareasSubfase(long idProyecto, Integer idSubfase, Integer idExcelElegido) {
+        System.out.println(
+                "[LOG SUBFASE] Solicitando tareas de Subfase ID: " + idSubfase + " para Proyecto ID: " + idProyecto);
         Integer idExcelBase = resolverIdExcelBase(idProyecto, idExcelElegido);
         if (idExcelBase == null) {
             System.out.println("[LOG SUBFASE] No se localizó ningún Excel base activo.");
@@ -448,13 +497,19 @@ public class DetalleEstimacionService {
         }
 
         List<DetalleEstimacion> todasLasEstimaciones = detalleEstimacionRepository.findByIdExcel(idExcelBase);
-        
+
         List<TareaProyecto> todasTareasProyecto = tareaProyectoRepository.findAll().stream()
-                .filter(t -> { return t.getIdProyecto().equals(idProyecto); })
+                .filter(t -> {
+                    return t.getIdProyecto().equals(idProyecto);
+                })
                 .collect(Collectors.toList());
-                
+
         Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
-                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> { return t; }, (a, b) -> { return a; }));
+                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> {
+                    return t;
+                }, (a, b) -> {
+                    return a;
+                }));
 
         Map<String, List<DetalleEstimacion>> tareasAgrupadas = todasLasEstimaciones.stream()
                 .filter(d -> {
@@ -466,10 +521,11 @@ public class DetalleEstimacionService {
                     return tp != null ? tp.getTarea() : "Desconocido";
                 }));
 
-        System.out.println("[LOG SUBFASE] Cantidad de tareas agrupadas listas para enviar al Front: " + tareasAgrupadas.size());
+        System.out.println(
+                "[LOG SUBFASE] Cantidad de tareas agrupadas listas para enviar al Front: " + tareasAgrupadas.size());
 
         List<TareaSubfaseDTO> resultado = new ArrayList<>();
-        
+
         for (Map.Entry<String, List<DetalleEstimacion>> entry : tareasAgrupadas.entrySet()) {
             TareaSubfaseDTO dto = new TareaSubfaseDTO();
             dto.setNombreTarea(entry.getKey());
@@ -489,13 +545,13 @@ public class DetalleEstimacionService {
             dto.setTiempoTotalMin(sumaMin);
             dto.setTiempoTotalMax(sumaMax);
             dto.setTiempoTotalReal(Math.round(sumaReal * 10.0) / 10.0);
-            
+
             resultado.add(dto);
         }
 
         if (idExcelElegido != null) {
             List<DetalleEstimacion> estimacionesElegidas = detalleEstimacionRepository.findByIdExcel(idExcelElegido);
-            
+
             Map<String, List<DetalleEstimacion>> agrupadasElegidas = estimacionesElegidas.stream()
                     .filter(d -> {
                         TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
@@ -509,10 +565,10 @@ public class DetalleEstimacionService {
             for (TareaSubfaseDTO dto : resultado) {
                 if (agrupadasElegidas.containsKey(dto.getNombreTarea())) {
                     List<DetalleEstimacion> tareasElegidas = agrupadasElegidas.get(dto.getNombreTarea());
-                    
+
                     double sumaMinElegido = tareasElegidas.stream().mapToDouble(DetalleEstimacion::getTiempoMin).sum();
                     double sumaMaxElegido = tareasElegidas.stream().mapToDouble(DetalleEstimacion::getTiempoMax).sum();
-                    
+
                     dto.setTiempoTotalMinElegido(sumaMinElegido);
                     dto.setTiempoTotalMaxElegido(sumaMaxElegido);
                 }
@@ -521,24 +577,28 @@ public class DetalleEstimacionService {
 
         return resultado;
     }
+
     /**
-     * Calcula masivamente los resúmenes y medias de tiempos de todas las subfases indexándolos por el ID de subfase.
+     * Calcula masivamente los resúmenes y medias de tiempos de todas las subfases
+     * indexándolos por el ID de subfase.
+     * 
      * @param idProyecto ID del proyecto.
-     * @return Map indexado por ID de subfase con sus resúmenes numéricos de tiempos reales y medias estimadas.
+     * @return Map indexado por ID de subfase con sus resúmenes numéricos de tiempos
+     *         reales y medias estimadas.
      */
     public Map<Integer, ResumenTiemposDTO> obtenerResumenTodasSubfases(Long idProyecto, Integer idExcelElegido) {
         Map<Integer, ResumenTiemposDTO> resultado = new HashMap<>();
-        
+
         // Usamos el Excel que nos pide el Front, o el vigente si no pide ninguno.
         Integer idExcel = resolverIdExcelBase(idProyecto, idExcelElegido);
-        
+
         if (idExcel == null) {
             return resultado;
         }
 
         List<DetalleEstimacion> todasLasTareas = detalleEstimacionRepository.findByIdExcel(idExcel);
         List<Object[]> sumasBD = imputacionClockifyRepository.sumarHorasValidasAgrupadasPorTarea(idProyecto);
-        
+
         Map<Long, Double> mapaHorasReales = new HashMap<>();
         for (Object[] fila : sumasBD) {
             Long idDetalle = (Long) fila[0];
@@ -547,18 +607,26 @@ public class DetalleEstimacionService {
         }
 
         List<TareaProyecto> todasTareasProyecto = tareaProyectoRepository.findAll().stream()
-                .filter(t -> { return t.getIdProyecto().equals(idProyecto); })
+                .filter(t -> {
+                    return t.getIdProyecto().equals(idProyecto);
+                })
                 .collect(Collectors.toList());
-                
+
         Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
-                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> { return t; }, (a, b) -> { return a; }));
+                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> {
+                    return t;
+                }, (a, b) -> {
+                    return a;
+                }));
 
         Map<Integer, List<DetalleEstimacion>> tareasPorSubfase = todasLasTareas.stream()
-            .filter(d -> { return mapaTareasProyecto.containsKey(d.getIdTareaProyecto()); })
-            .collect(Collectors.groupingBy(d -> {
-                TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
-                return tp != null ? tp.getIdFase() : -1;
-            }));
+                .filter(d -> {
+                    return mapaTareasProyecto.containsKey(d.getIdTareaProyecto());
+                })
+                .collect(Collectors.groupingBy(d -> {
+                    TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
+                    return tp != null ? tp.getIdFase() : -1;
+                }));
 
         for (Map.Entry<Integer, List<DetalleEstimacion>> entry : tareasPorSubfase.entrySet()) {
             Integer idSubfase = entry.getKey();
@@ -575,11 +643,12 @@ public class DetalleEstimacionService {
                 sumaMinTotal += (det.getTiempoMin() != null ? det.getTiempoMin() : 0.0);
                 sumaMaxTotal += (det.getTiempoMax() != null ? det.getTiempoMax() : 0.0);
             }
-            
-            // Agrupamos por ID de tarea para no sumar las horas reales 3 veces si hay 3 departamentos
+
+            // Agrupamos por ID de tarea para no sumar las horas reales 3 veces si hay 3
+            // departamentos
             java.util.Set<Long> idsTareasUnicas = tareas.stream()
-                .map(DetalleEstimacion::getIdTareaProyecto)
-                .collect(Collectors.toSet());
+                    .map(DetalleEstimacion::getIdTareaProyecto)
+                    .collect(Collectors.toSet());
 
             for (Long idTarea : idsTareasUnicas) {
                 sumaRealTotal += mapaHorasReales.getOrDefault(idTarea, 0.0);
@@ -596,100 +665,112 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Alias histórico para obtener los desgloses específicos cruzando la información con el pivote TareaProyecto.
-     * @param idProyecto ID del proyecto.
-     * @param idSubfase ID de la subfase.
-     * @param nombreTarea Texto descriptivo de la tarea.
+     * Alias histórico para obtener los desgloses específicos cruzando la
+     * información con el pivote TareaProyecto.
+     * 
+     * @param idProyecto     ID del proyecto.
+     * @param idSubfase      ID de la subfase.
+     * @param nombreTarea    Texto descriptivo de la tarea.
      * @param idExcelElegido ID del documento Excel a forzar.
      * @return Lista de DTOs enriquecidos listos para renderizar.
      */
-    public List<DetalleEstimacionDTO> obtenerDetallePorCriteriosHistorico(Long idProyecto, Integer idSubfase, String nombreTarea, Integer idExcelElegido) {
+    public List<DetalleEstimacionDTO> obtenerDetallePorCriteriosHistorico(Long idProyecto, Integer idSubfase,
+            String nombreTarea, Integer idExcelElegido) {
         return obtenerDetallePorCriterios(idProyecto, idSubfase, nombreTarea, idExcelElegido);
     }
 
+    public List<DepartamentoTareaDTO> obtenerDetalles(Long idProyecto, Integer idSubfase, String nombreTarea,
+            Integer idExcelElegido) {
+        Integer idExcelBase = resolverIdExcelBase(idProyecto, idExcelElegido);
+        if (idExcelBase == null) {
+            return new ArrayList<>();
+        }
 
-    public List<DepartamentoTareaDTO> obtenerDetalles(Long idProyecto, Integer idSubfase, String nombreTarea, Integer idExcelElegido) {
-    Integer idExcelBase = resolverIdExcelBase(idProyecto, idExcelElegido);
-    if (idExcelBase == null) {
-        return new ArrayList<>();
-    }
+        List<DetalleEstimacion> todasLasEstimaciones = detalleEstimacionRepository.findByIdExcel(idExcelBase);
+        List<TareaProyecto> todasTareasProyecto = tareaProyectoRepository.findAll().stream()
+                .filter(t -> t.getIdProyecto().equals(idProyecto))
+                .collect(Collectors.toList());
 
-    List<DetalleEstimacion> todasLasEstimaciones = detalleEstimacionRepository.findByIdExcel(idExcelBase);
-    List<TareaProyecto> todasTareasProyecto = tareaProyectoRepository.findAll().stream()
-        .filter(t -> t.getIdProyecto().equals(idProyecto))
-        .collect(Collectors.toList());
+        Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
+                .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> t, (a, b) -> a));
 
-    Map<Long, TareaProyecto> mapaTareasProyecto = todasTareasProyecto.stream()
-        .collect(Collectors.toMap(TareaProyecto::getIdTareaProyecto, t -> t, (a, b) -> a));
+        List<Long> idsTareaProyecto = todasLasEstimaciones.stream()
+                .map(DetalleEstimacion::getIdTareaProyecto)
+                .distinct()
+                .collect(Collectors.toList());
 
-    List<Long> idsTareaProyecto = todasLasEstimaciones.stream()
-        .map(DetalleEstimacion::getIdTareaProyecto)
-        .distinct()
-        .collect(Collectors.toList());
-
-    final Map<Long, String> gitLabTitulos = new HashMap<>();
-    if (!idsTareaProyecto.isEmpty()) {
-        List<GitLabTarea> tareasGitLab = gitLabTareaRepository.findValidasByTareaProyectoIn(idsTareaProyecto);
-        for (GitLabTarea g : tareasGitLab) {
-            if (g.getTareaProyecto() != null && g.getTareaProyecto() != null) {
-                gitLabTitulos.put(g.getTareaProyecto(), g.getTitulo());
+        final Map<Long, String> gitLabTitulos = new HashMap<>();
+        if (!idsTareaProyecto.isEmpty()) {
+            List<GitLabTarea> tareasGitLab = gitLabTareaRepository.findValidasByTareaProyectoIn(idsTareaProyecto);
+            for (GitLabTarea g : tareasGitLab) {
+                if (g.getTareaProyecto() != null && g.getTareaProyecto() != null) {
+                    gitLabTitulos.put(g.getTareaProyecto(), g.getTitulo());
+                }
             }
         }
-    }
 
-    return todasLasEstimaciones.stream()
-        .filter(d -> {
-            TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
-            return tp != null
-                && tp.getIdFase().equals(idSubfase)
-                && tp.getTarea().equalsIgnoreCase(nombreTarea.trim());
-        })
-        .map(entidad -> {
-            TareaProyecto tp = mapaTareasProyecto.get(entidad.getIdTareaProyecto());
-            Double tiempoClockify = imputacionClockifyRepository.sumarHorasPorTarea(entidad.getIdTareaProyecto());
-            return new DepartamentoTareaDTO(
-                entidad.getIdTareaProyecto(),
-                entidad.getIdExcel(),
-                tp != null ? tp.getIdFase() : null,
-                tp != null ? tp.getTarea() : null,
-                entidad.getTiempoMin(),
-                entidad.getTiempoMax(),
-                tiempoClockify != null ? Math.round(tiempoClockify * 10.0) / 10.0 : 0.0,
-                tp != null ? tp.getCompletada() : false,
-                gitLabTitulos.get(entidad.getIdTareaProyecto()),
-                gitLabTareaRepository.findNumeroGitlabByTareaProyectoId(tp.getIdTareaProyecto()),
-                tp.getIdDepartamento(),
-                departamentoRepository.findNombreById(tp.getIdDepartamento())
-            );
-        })
-        .collect(Collectors.toList());
+        return todasLasEstimaciones.stream()
+                .filter(d -> {
+                    TareaProyecto tp = mapaTareasProyecto.get(d.getIdTareaProyecto());
+                    return tp != null
+                            && tp.getIdFase().equals(idSubfase)
+                            && tp.getTarea().equalsIgnoreCase(nombreTarea.trim());
+                })
+                .map(entidad -> {
+                    TareaProyecto tp = mapaTareasProyecto.get(entidad.getIdTareaProyecto());
+                    Double tiempoClockify = imputacionClockifyRepository
+                            .sumarHorasPorTarea(entidad.getIdTareaProyecto());
+                    return new DepartamentoTareaDTO(
+                            entidad.getIdTareaProyecto(),
+                            entidad.getIdExcel(),
+                            tp != null ? tp.getIdFase() : null,
+                            tp != null ? tp.getTarea() : null,
+                            entidad.getTiempoMin(),
+                            entidad.getTiempoMax(),
+                            tiempoClockify != null ? Math.round(tiempoClockify * 10.0) / 10.0 : 0.0,
+                            tp != null ? tp.getCompletada() : false,
+                            gitLabTitulos.get(entidad.getIdTareaProyecto()),
+                            gitLabTareaRepository.findNumeroGitlabByTareaProyectoId(tp.getIdTareaProyecto()),
+                            tp.getIdDepartamento(),
+                            departamentoRepository.findNombreById(tp.getIdDepartamento()));
+                })
+                .collect(Collectors.toList());
     }
 
     /**
-     * Alias histórico para recuperar agregaciones de tareas por subfase vinculadas al pivote.
-     * @param idProyecto ID del proyecto.
-     * @param idSubfase ID de la subfase.
+     * Alias histórico para recuperar agregaciones de tareas por subfase vinculadas
+     * al pivote.
+     * 
+     * @param idProyecto     ID del proyecto.
+     * @param idSubfase      ID de la subfase.
      * @param idExcelElegido ID opcional del Excel del historial.
      * @return Lista agregada de tareas de subfase.
      */
-    public List<TareaSubfaseDTO> obtenerTareasSubfaseHistorico(long idProyecto, Integer idSubfase, Integer idExcelElegido) {
+    public List<TareaSubfaseDTO> obtenerTareasSubfaseHistorico(long idProyecto, Integer idSubfase,
+            Integer idExcelElegido) {
         return obtenerTareasSubfase(idProyecto, idSubfase, idExcelElegido);
     }
 
     /**
-     * Alias histórico para la recopilación masiva de resúmenes de subfase en base al pivote.
-     * @param idProyecto ID del proyecto.
+     * Alias histórico para la recopilación masiva de resúmenes de subfase en base
+     * al pivote.
+     * 
+     * @param idProyecto     ID del proyecto.
      * @param idExcelElegido ID del documento Excel.
      * @return Map estructurado con los cálculos agregados.
      */
-    public Map<Integer, ResumenTiemposDTO> obtenerResumenTodasSubfasesHistorico(Long idProyecto, Integer idExcelElegido) {
+    public Map<Integer, ResumenTiemposDTO> obtenerResumenTodasSubfasesHistorico(Long idProyecto,
+            Integer idExcelElegido) {
         return obtenerResumenTodasSubfases(idProyecto, idExcelElegido);
     }
 
     /**
-     * Resuelve de forma segura qué ID de Excel se debe utilizar como base para las consultas analíticas.
-     * @param idProyecto ID del proyecto local.
-     * @param idExcelElegido ID explícito enviado, o null si se requiere usar el vigente.
+     * Resuelve de forma segura qué ID de Excel se debe utilizar como base para las
+     * consultas analíticas.
+     * 
+     * @param idProyecto     ID del proyecto local.
+     * @param idExcelElegido ID explícito enviado, o null si se requiere usar el
+     *                       vigente.
      * @return El Integer correspondiente al ID del documento definitivo o null.
      */
     private Integer resolverIdExcelBase(Long idProyecto, Integer idExcelElegido) {
@@ -701,17 +782,24 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Obtiene el mapa completo de resolución de nombres de fases de la base de datos.
+     * Obtiene el mapa completo de resolución de nombres de fases de la base de
+     * datos.
+     * 
      * @return Un mapa indexando IDs de Fases con sus nombres textuales.
      */
     private Map<Integer, String> obtenerMapaNombresFase() {
         return faseRepository.findAll().stream()
-                .collect(Collectors.toMap(Fase::getId, Fase::getNombre, (a, b) -> { return a; }));
+                .collect(Collectors.toMap(Fase::getId, Fase::getNombre, (a, b) -> {
+                    return a;
+                }));
     }
 
     /**
-     * Calcula los totales completos de un proyecto calculando la suma de tiempos reales válidos globales 
-     * y la media matemática total del presupuesto del Excel establecido como vigente.
+     * Calcula los totales completos de un proyecto calculando la suma de tiempos
+     * reales válidos globales
+     * y la media matemática total del presupuesto del Excel establecido como
+     * vigente.
+     * 
      * @param idProyecto ID del proyecto a resumir.
      * @return DTO ResumenTiemposDTO con los resultados matemáticos listos.
      */
@@ -720,15 +808,19 @@ public class DetalleEstimacionService {
         Excel excel = excelService.obtenerExcelVigentePorProyecto(idProyecto);
         double sumaMin = 0.0;
         double sumaMax = 0.0;
-        
+
         if (excel != null) {
             List<DetalleEstimacion> todasLasTareas = detalleEstimacionRepository.findByIdExcel(excel.getIdExcel());
-            
+
             sumaMin = todasLasTareas.stream()
-                    .mapToDouble(t -> { return t.getTiempoMin() != null ? t.getTiempoMin() : 0.0; })
+                    .mapToDouble(t -> {
+                        return t.getTiempoMin() != null ? t.getTiempoMin() : 0.0;
+                    })
                     .sum();
             sumaMax = todasLasTareas.stream()
-                    .mapToDouble(t -> { return t.getTiempoMax() != null ? t.getTiempoMax() : 0.0; })
+                    .mapToDouble(t -> {
+                        return t.getTiempoMax() != null ? t.getTiempoMax() : 0.0;
+                    })
                     .sum();
         }
 
@@ -741,8 +833,10 @@ public class DetalleEstimacionService {
 
     /**
      * Procesa masivamente los resúmenes de una colección de proyectos en bloque.
+     * 
      * @param idsProyectos Lista de identificadores de proyectos.
-     * @return Map asociando el ID del proyecto con su DTO de resumen correspondiente.
+     * @return Map asociando el ID del proyecto con su DTO de resumen
+     *         correspondiente.
      */
     public Map<Long, ResumenTiemposDTO> obtenerResumenVariosProyectos(List<Long> idsProyectos) {
         Map<Long, ResumenTiemposDTO> resultados = new HashMap<>();
@@ -753,54 +847,48 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Modifica los valores matemáticos de un presupuesto en BD y actualiza de forma segura el pivote textual TareaProyecto asociado.
-     * @param id ID único de la fila del presupuesto de estimación.
+     * Modifica los valores matemáticos de un presupuesto en BD y actualiza de forma
+     * segura el pivote textual TareaProyecto asociado.
+     * 
+     * @param id         ID único de la fila del presupuesto de estimación.
      * @param detalleDTO DTO con la nueva información descriptiva o presupuestaria.
      * @return El DetalleEstimacion actualizado y persistido en el sistema.
      */
-    @Auditable(
-        accion = "ACTUALIZAR_ESTIMACION", 
-        tabla = "detalle_estimacion", 
-        entidad = DetalleEstimacion.class,
-        descripcion = "Se actualizaron los datos numéricos de la estimación."
-    )
+    @Auditable(accion = "ACTUALIZAR_ESTIMACION", tabla = "detalle_estimacion", entidad = DetalleEstimacion.class, descripcion = "Se actualizaron los datos numéricos de la estimación.")
     public DetalleEstimacion actualizarDetalle(Long id, DetalleEstimacionDTO detalleDTO) {
         List<DetalleEstimacion> detalleBD = detalleEstimacionRepository.findByIdTareaProyecto(id);
 
-        if(detalleBD.isEmpty()){
-           throw new RuntimeException("No se encontró la tarea con ID: " + id);
+        if (detalleBD.isEmpty()) {
+            throw new RuntimeException("No se encontró la tarea con ID: " + id);
         }
 
         DetalleEstimacion detalle = detalleBD.get(0);
-            
 
-        if (detalleDTO.getTiempoMax() != null) { 
-            detalle.setTiempoMax(detalleDTO.getTiempoMax()); 
+        if (detalleDTO.getTiempoMax() != null) {
+            detalle.setTiempoMax(detalleDTO.getTiempoMax());
         }
-        if (detalleDTO.getTiempoMin() != null) { 
-            detalle.setTiempoMin(detalleDTO.getTiempoMin()); 
+        if (detalleDTO.getTiempoMin() != null) {
+            detalle.setTiempoMin(detalleDTO.getTiempoMin());
         }
 
         TareaProyecto tp = tareaProyectoRepository.findById(detalle.getIdTareaProyecto())
-            .orElseThrow(() -> new RuntimeException("No se localizó la tarea global pivote asociada."));
+                .orElseThrow(() -> new RuntimeException("No se localizó la tarea global pivote asociada."));
 
         tp.setCompletada(detalleDTO.getCompletada());
-        
+
         tareaProyectoRepository.save(tp);
         return detalleEstimacionRepository.save(detalle);
     }
 
     /**
-     * Da de alta un nuevo presupuesto de estimación manual aplicando el patrón Find-or-Create en la TareaProyecto global.
-     * @param dto DTO que contiene la identidad conceptual de la tarea y sus nuevos tiempos estimados.
+     * Da de alta un nuevo presupuesto de estimación manual aplicando el patrón
+     * Find-or-Create en la TareaProyecto global.
+     * 
+     * @param dto DTO que contiene la identidad conceptual de la tarea y sus nuevos
+     *            tiempos estimados.
      * @return La nueva entidad DetalleEstimacion registrada con éxito.
      */
-    @Auditable(
-        accion = "CREAR_ESTIMACION", 
-        tabla = "detalle_estimacion", 
-        entidad = DetalleEstimacion.class,
-        descripcion = "Se creó manualmente una estimación de tarea."
-    )
+    @Auditable(accion = "CREAR_ESTIMACION", tabla = "detalle_estimacion", entidad = DetalleEstimacion.class, descripcion = "Se creó manualmente una estimación de tarea.")
     public DetalleEstimacion crearTarea(DetalleEstimacionDTO dto) {
         if (dto.getTarea() == null || dto.getTarea().trim().isEmpty()) {
             throw new RuntimeException("El nombre de la tarea es obligatorio.");
@@ -819,20 +907,21 @@ public class DetalleEstimacionService {
         }
 
         Excel excel = excelRepository.findById(dto.getIdExcel())
-            .orElseThrow(() -> new RuntimeException("El documento Excel base no existe."));
+                .orElseThrow(() -> new RuntimeException("El documento Excel base no existe."));
         Long idProyecto = excel.getIdProyecto();
 
         TareaProyecto tareaProyecto = tareaProyectoRepository
-            .findByIdProyectoAndIdFaseAndIdDepartamentoAndTarea(idProyecto, dto.getIdSubFase(), dto.getIdDepartamento(), dto.getTarea().trim())
-            .orElseGet(() -> {
-                TareaProyecto tp = new TareaProyecto();
-                tp.setIdProyecto(idProyecto);
-                tp.setIdFase(dto.getIdSubFase());
-                tp.setIdDepartamento(dto.getIdDepartamento());
-                tp.setTarea(dto.getTarea().trim());
-                tp.setCompletada(false);
-                return tareaProyectoRepository.save(tp);
-            });
+                .findByIdProyectoAndIdFaseAndIdDepartamentoAndTarea(idProyecto, dto.getIdSubFase(),
+                        dto.getIdDepartamento(), dto.getTarea().trim())
+                .orElseGet(() -> {
+                    TareaProyecto tp = new TareaProyecto();
+                    tp.setIdProyecto(idProyecto);
+                    tp.setIdFase(dto.getIdSubFase());
+                    tp.setIdDepartamento(dto.getIdDepartamento());
+                    tp.setTarea(dto.getTarea().trim());
+                    tp.setCompletada(false);
+                    return tareaProyectoRepository.save(tp);
+                });
 
         DetalleEstimacion nueva = new DetalleEstimacion();
         nueva.setIdExcel(dto.getIdExcel());
@@ -844,25 +933,22 @@ public class DetalleEstimacionService {
     }
 
     /**
-     * Elimina de forma permanente un presupuesto de estimación específico de la base de datos.
+     * Elimina de forma permanente un presupuesto de estimación específico de la
+     * base de datos.
+     * 
      * @param id ID único de la estimación numérico a remover.
      * @return La entidad DetalleEstimacion eliminada.
      */
-    @Auditable(
-        accion = "BORRAR_ESTIMACION", 
-        tabla = "detalle_estimacion", 
-        entidad = DetalleEstimacion.class,
-        descripcion = "Se eliminó la estimación asociada a la tarea con ID '#{#resultado.idTareaProyecto}'"
-    )
+    @Auditable(accion = "BORRAR_ESTIMACION", tabla = "detalle_estimacion", entidad = DetalleEstimacion.class, descripcion = "Se eliminó la estimación asociada a la tarea con ID '#{#resultado.idTareaProyecto}'")
     @Transactional
     public DetalleEstimacion eliminarTarea(Long id) {
         DetalleEstimacion detalle = detalleEstimacionRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("No se encontró la tarea con ID: " + id));
+                .orElseThrow(() -> new RuntimeException("No se encontró la tarea con ID: " + id));
 
         Long idTareaProyecto = detalle.getIdTareaProyecto();
         List<DetalleEstimacion> detallesAEliminar = idTareaProyecto == null
-            ? java.util.List.of(detalle)
-            : detalleEstimacionRepository.findByIdTareaProyecto(idTareaProyecto);
+                ? java.util.List.of(detalle)
+                : detalleEstimacionRepository.findByIdTareaProyecto(idTareaProyecto);
 
         if (detallesAEliminar == null || detallesAEliminar.isEmpty()) {
             detallesAEliminar = java.util.List.of(detalle);
@@ -870,11 +956,10 @@ public class DetalleEstimacionService {
 
         detalleEstimacionRepository.deleteAll(detallesAEliminar);
         limpiarReferenciasHuerfanasTareaProyecto(
-            java.util.Collections.singletonList(idTareaProyecto),
-            idTareaProyecto == null
-                ? java.util.List.of()
-                : tareaProyectoRepository.findAllById(java.util.Collections.singletonList(idTareaProyecto))
-        );
+                java.util.Collections.singletonList(idTareaProyecto),
+                idTareaProyecto == null
+                        ? java.util.List.of()
+                        : tareaProyectoRepository.findAllById(java.util.Collections.singletonList(idTareaProyecto)));
         return detalle;
     }
 
@@ -890,24 +975,17 @@ public class DetalleEstimacionService {
         }
 
         List<TareaProyecto> tareasProyecto = tareaProyectoRepository.findAllById(
-            java.util.Collections.singletonList(idTareaProyecto)
-        );
+                java.util.Collections.singletonList(idTareaProyecto));
 
         detalleEstimacionRepository.deleteAll(detallesAEliminar);
         limpiarReferenciasHuerfanasTareaProyecto(
-            java.util.Collections.singletonList(idTareaProyecto),
-            tareasProyecto
-        );
+                java.util.Collections.singletonList(idTareaProyecto),
+                tareasProyecto);
 
         return detallesAEliminar.size();
     }
 
-    @Auditable(
-        accion = "BORRAR_TAREA", 
-        tabla = "detalle_estimacion", 
-        entidad = DetalleEstimacion.class,
-        descripcion = "Se eliminó la tarea: #{#nombreTarea}"
-    )
+    @Auditable(accion = "BORRAR_TAREA", tabla = "detalle_estimacion", entidad = DetalleEstimacion.class, descripcion = "Se eliminó la tarea: #{#nombreTarea}")
     @Transactional
     public int eliminarTareaCompleta(Long idProyecto, Integer idSubfase, String nombreTarea, Integer idExcelElegido) {
         String nombreTareaLimpio = nombreTarea != null ? nombreTarea.trim() : "";
@@ -921,19 +999,19 @@ public class DetalleEstimacionService {
         }
 
         List<TareaProyecto> tareasProyecto = tareaProyectoRepository
-            .findByIdProyectoAndIdFaseAndTarea(idProyecto, idSubfase, nombreTareaLimpio);
+                .findByIdProyectoAndIdFaseAndTarea(idProyecto, idSubfase, nombreTareaLimpio);
 
         if (tareasProyecto == null || tareasProyecto.isEmpty()) {
             throw new RuntimeException("No se encontrÃ³ la tarea a eliminar.");
         }
 
         List<Long> idsTareaProyecto = tareasProyecto.stream()
-            .map(TareaProyecto::getIdTareaProyecto)
-            .distinct()
-            .collect(Collectors.toList());
+                .map(TareaProyecto::getIdTareaProyecto)
+                .distinct()
+                .collect(Collectors.toList());
 
         List<DetalleEstimacion> detallesVisibles = detalleEstimacionRepository
-            .findByIdExcelAndIdTareaProyectoIn(idExcelObjetivo, idsTareaProyecto);
+                .findByIdExcelAndIdTareaProyectoIn(idExcelObjetivo, idsTareaProyecto);
 
         if (detallesVisibles == null || detallesVisibles.isEmpty()) {
             throw new RuntimeException("No hay estimaciones de esa tarea en el Excel seleccionado.");
@@ -951,7 +1029,8 @@ public class DetalleEstimacionService {
         return detallesAEliminar.size();
     }
 
-    private void limpiarReferenciasHuerfanasTareaProyecto(List<Long> idsTareaProyecto, List<TareaProyecto> tareasProyectoCandidatas) {
+    private void limpiarReferenciasHuerfanasTareaProyecto(List<Long> idsTareaProyecto,
+            List<TareaProyecto> tareasProyectoCandidatas) {
         if (idsTareaProyecto == null || idsTareaProyecto.isEmpty()) {
             return;
         }
@@ -983,17 +1062,19 @@ public class DetalleEstimacionService {
             imputacionClockifyRepository.saveAll(imputacionesRelacionadas);
         }
 
-        List<TareaProyecto> tareasProyectoAEliminar = (tareasProyectoCandidatas == null ? java.util.List.<TareaProyecto>of() : tareasProyectoCandidatas)
-            .stream()
-            .filter(tarea -> tarea != null && idsTareaSinReferencias.contains(tarea.getIdTareaProyecto()))
-            .collect(Collectors.toList());
+        List<TareaProyecto> tareasProyectoAEliminar = (tareasProyectoCandidatas == null
+                ? java.util.List.<TareaProyecto>of()
+                : tareasProyectoCandidatas)
+                .stream()
+                .filter(tarea -> tarea != null && idsTareaSinReferencias.contains(tarea.getIdTareaProyecto()))
+                .collect(Collectors.toList());
 
         if (!tareasProyectoAEliminar.isEmpty()) {
             tareaProyectoRepository.deleteAll(tareasProyectoAEliminar);
         }
     }
 
-    public boolean tareaCompletada(String nombreTarea, Long idProyecto, int idSubfase){
+    public boolean tareaCompletada(String nombreTarea, Long idProyecto, int idSubfase) {
         return tareaProyectoRepository.estanTodasCompletadas(nombreTarea, idProyecto, idSubfase);
     }
 }
